--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -609,5 +609,6 @@
     <color name="color_0FA172">#0FA172</color>
     <color name="color_F4F6FB">#F4F6FB</color>
     <color name="color_F1F3FA">#F1F3FA</color>
+    <color name="color_5C5E66">#5C5E66</color>
 
 </resources>
