赛事详情修改小节末位比分排版

--- a/app/src/main/res/layout/content_odds_detail_list_endscore.xml
+++ b/app/src/main/res/layout/content_odds_detail_list_endscore.xml
@@ -13,6 +13,7 @@
             android:id="@+id/rv_bet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/margin_5"
             android:nestedScrollingEnabled="false"
             android:background="@color/color_FFFFFF"
             android:overScrollMode="never"
