--- a/app/src/main/res/layout/item_number_keyboard_layout2.xml
+++ b/app/src/main/res/layout/item_number_keyboard_layout2.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingStart="@dimen/margin_12"
     android:paddingTop="@dimen/margin_3"
     android:paddingEnd="@dimen/margin_12"
-    android:paddingBottom="@dimen/margin_8">
+    android:paddingBottom="@dimen/margin_8"
+    tools:parentTag="LinearLayout">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -177,4 +179,4 @@
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</LinearLayout>
+</merge>
