篮球末尾比分玩法专题

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -611,4 +611,7 @@
     <color name="color_F1F3FA">#F1F3FA</color>
     <color name="color_5C5E66">#5C5E66</color>
 
+    <color name="color_0E131F">#0E131F</color>
+    <color name="color_181d28">#181d28</color>
+
 </resources>
