--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -621,5 +621,6 @@
     <color name="color_314363">#314363</color>
     <color name="color_181d28">#181d28</color>
     <color name="color_2B7DFF">#2B7DFF</color>
+    <color name="color_0E131F">#0E131F</color>
 
 </resources>
