投注弹窗优化

--- a/app/src/main/res/layout/fragment_endcard_record.xml
+++ b/app/src/main/res/layout/fragment_endcard_record.xml
@@ -131,7 +131,7 @@
              android:layout_marginTop="@dimen/margin_4"
              android:textColor="@color/color_BEC7DC"
              android:textSize="@dimen/textSize14sp"
-             tools:text="1,000,000.00"/>
+             android:text="1,000,000.00"/>
 
      </LinearLayout>
         <LinearLayout
@@ -157,7 +157,7 @@
                 android:layout_marginTop="@dimen/margin_4"
                 android:textColor="@color/color_BEC7DC"
                 android:textSize="@dimen/textSize14sp"
-                tools:text="27"/>
+                android:text="27"/>
 
         </LinearLayout>
         <LinearLayout
@@ -183,7 +183,7 @@
                 android:layout_marginTop="@dimen/margin_4"
                 android:textColor="@color/color_BEC7DC"
                 android:textSize="@dimen/textSize14sp"
-                tools:text="1,000,000.00"/>
+                android:text="1,000,000.00"/>
 
         </LinearLayout>
     </LinearLayout>
