--- a/app/src/main/res/layout/item_endcard_record.xml
+++ b/app/src/main/res/layout/item_endcard_record.xml
@@ -26,7 +26,7 @@
            android:ellipsize="end"
            android:textColor="@color/color_FFFFFF"
            android:textSize="@dimen/textSize16sp"
-           tools:text="NBA"/>
+           android:text="NBA"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
            android:ellipsize="end"
            android:textColor="@color/color_6D7693"
            android:textSize="@dimen/textSize12sp"
-           tools:text="09/02/2024 08:42"/>
+           android:text="09/02/2024 08:42"/>
    </LinearLayout>
     <View
         android:layout_width="match_parent"
@@ -82,7 +82,7 @@
                         android:ellipsize="end"
                         android:textSize="@dimen/textSize14sp"
                         android:textColor="@color/color_BEC7DC"
-                        tools:text="New York Knicks"/>
+                        android:text="New York Knicks"/>
                     <TextView
                         android:id="@+id/tvAwayName"
                         android:layout_width="match_parent"
@@ -91,7 +91,7 @@
                         android:ellipsize="end"
                         android:textSize="@dimen/textSize14sp"
                         android:textColor="@color/color_BEC7DC"
-                        tools:text="Minnesota Timberwolves"/>
+                        android:text="Minnesota Timberwolves"/>
                 </LinearLayout>
         </LinearLayout>
 
@@ -134,7 +134,7 @@
                     android:textColor="@color/color_FFFFFF"
                     android:textSize="@dimen/textSize14sp"
                     android:textStyle="bold"
-                    tools:text="50.000" />
+                    android:text="50.000" />
             </LinearLayout>
 
             <LinearLayout
@@ -163,7 +163,7 @@
                     android:textColor="@color/color_FFFFFF"
                     android:textSize="@dimen/textSize14sp"
                     android:textStyle="bold"
-                    tools:text="9,999,999.000" />
+                    android:text="9,999,999.000" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
