--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -624,5 +624,6 @@
     <color name="color_0E131F">#0E131F</color>
     <color name="color_0C121E">#0C121E</color>
     <color name="color_353B4E">#353B4E</color>
+    <color name="color_1B2436">#1B2436</color>
 
 </resources>
