增加引导页

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -628,5 +628,6 @@
     <color name="color_0C121E">#0C121E</color>
     <color name="color_353B4E">#353B4E</color>
     <color name="color_1B2436">#1B2436</color>
-
+    <color name="color_F5FFC700">#F5FFC700</color>
+    <color name="color_1F2023">#1F2023</color>
 </resources>
