--- a/app/src/main/res/layout/item_endcard_record.xml
+++ b/app/src/main/res/layout/item_endcard_record.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginBottom="@dimen/margin_4"
+    android:foreground="@drawable/fg_ripple"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/color_1A202E">
    <LinearLayout
@@ -168,6 +169,7 @@
         </LinearLayout>
     </LinearLayout>
         <ImageView
+            android:id="@+id/ivStatus"
             android:layout_width="@dimen/margin_44"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_4"
