记录显示优化

--- a/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
+++ b/app/src/main/res/layout/item_endcard_detail_result_row_content.xml
@@ -45,6 +45,7 @@
         android:layout_weight="170"
         android:gravity="center"
         android:fontFamily="@font/inter_bold"
+        android:textFontWeight="500"
         android:text="₱ +895.64"
         android:textColor="@color/color_FFFFFF"
         android:textSize="@dimen/textSize14sp" />
