--- a/app/src/main/res/layout/fragment_endcard_record_detail.xml
+++ b/app/src/main/res/layout/fragment_endcard_record_detail.xml
@@ -6,12 +6,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:ignore="MissingDefaultResource"
-    android:layout_marginTop="@dimen/margin_1"
     android:background="@color/color_0E131F">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/linBack"
         android:layout_width="match_parent"
         android:layout_height="44dp"
+        android:foreground="@drawable/fg_ripple"
         android:gravity="center_vertical"
+        android:layout_marginTop="@dimen/margin_1"
         android:background="@color/color_1A202E">
         <ImageView
             android:layout_width="wrap_content"
@@ -362,6 +364,7 @@
             android:textSize="@dimen/textSize18sp"
             android:textColor="@color/color_FFFFFF"
             android:fontFamily="@font/inter_bold"
+            android:textFontWeight="600"
             android:text="₱ +895.64"/>
     </LinearLayout>
     <TextView
