--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -630,4 +630,6 @@
     <color name="color_1B2436">#1B2436</color>
     <color name="color_F5FFC700">#F5FFC700</color>
     <color name="color_1F2023">#1F2023</color>
+    <color name="color_00FF81">#00FF81</color>
+
 </resources>
