--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -1,15 +1,260 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center" >
+    android:orientation="vertical"
+    android:paddingTop="1dp"
+    android:background="@color/color_0E131F">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@drawable/bg_viewcard_top">
 
-    <TextView
-        android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/ivBack"
+            android:layout_width="24dp"
+            android:layout_height="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="8dp"
+            android:layout_marginStart="12dp"
+            android:paddingVertical="8dp"
+            android:src="@drawable/ic_back_white"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            app:layout_constraintStart_toEndOf="@+id/ivBack"
+            app:layout_constraintTop_toTopOf="@+id/ivBack"
+            android:layout_marginStart="4dp"
+            android:gravity="center_vertical"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            tools:text="Card Game"
+            android:text="Card Game"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcvBetAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/ivBack"
+            app:layout_constraintStart_toStartOf="parent"
+            android:paddingEnd="12dp"
+            android:paddingStart="4dp"
+            android:clipToPadding="false"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/clMatchInfo"
+        android:layout_width="match_parent"
+        android:layout_height="124dp"
+        android:layout_marginTop="8dp"
+        android:padding="12dp"
+        tools:background="@drawable/bg_viewcard_top">
+
+        <TextView
+            android:id="@+id/tvTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:paddingHorizontal="6dp"
+            android:paddingVertical="3dp"
+            android:textSize="12sp"
+            android:textColor="@color/white"
+            tools:text="Date: 09/02/2024 08:42" />
+        
+        
+        <ImageView
+            android:id="@+id/ivHomeLogo"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTime"
+            android:layout_marginTop="11dp"
+            android:background="@drawable/bg_circle_stroke_team_log_dark"
+            android:padding="2dp"/>
+
+        <TextView
+            android:id="@+id/tvHomeName"
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            app:layout_constraintStart_toEndOf="@+id/ivHomeLogo"
+            app:layout_constraintTop_toTopOf="@+id/ivHomeLogo"
+            app:layout_constraintEnd_toStartOf="@+id/sections"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="15dp"
+            android:maxLines="1"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            tools:text="bulls"/>
+
+        <ImageView
+            android:id="@+id/ivAwayLogo"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/ivHomeLogo"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/bg_circle_stroke_team_log_dark"
+            android:padding="2dp"/>
+
+        <TextView
+            android:id="@+id/tvAwayName"
+            android:layout_width="0dp"
+            android:layout_height="28dp"
+            app:layout_constraintStart_toEndOf="@+id/ivAwayLogo"
+            app:layout_constraintTop_toTopOf="@+id/ivAwayLogo"
+            app:layout_constraintEnd_toStartOf="@+id/sections"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="15dp"
+            android:maxLines="1"
+            android:gravity="center_vertical"
+            android:textSize="14sp"
+            android:textColor="@color/white"
+            tools:text="bulls"/>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/sections"
+            android:layout_width="140dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/color_FFD600"
+                android:textStyle="bold"
+                android:text="Q1"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/color_FFD600"
+                android:textStyle="bold"
+                android:text="Q2"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/color_FFD600"
+                android:textStyle="bold"
+                android:text="Q3"/>
+
+            <TextView
+                android:layout_width="50dp"
+                android:layout_height="25dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/color_FFD600"
+                android:textStyle="bold"
+                android:text="Q4"/>
+
+            <TextView
+                android:id="@+id/tvQ1Amount"
+                android:layout_width="89dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                tools:text="100$"/>
+
+            <TextView
+                android:id="@+id/tvQ2Amount"
+                android:layout_width="89dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="25dp"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                tools:text="100$"/>
+
+            <TextView
+                android:id="@+id/tvQ3Amount"
+                android:layout_width="89dp"
+                android:layout_height="25dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="50dp"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                tools:text="100$"/>
+
+            <TextView
+                android:id="@+id/tvQ4Amount"
+                android:layout_width="89dp"
+                android:layout_height="25dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:gravity="center"
+                android:textSize="12sp"
+                android:textColor="@color/white"
+                tools:text="100$"/>
+            
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="25dp"
+                android:background="@color/color_1A202E"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="50dp"
+                android:background="@color/color_1A202E"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_marginTop="75dp"
+                android:background="@color/color_1A202E"/>
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="match_parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="50dp"
+                android:background="@color/color_1A202E"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rcvOddsList"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textColor="#ff0000"
-        android:text="End Card Game"/>
+        android:layout_marginTop="4dp"
+        android:paddingHorizontal="7dp" />
 
 </LinearLayout>
