--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -630,6 +630,13 @@
     <color name="color_1B2436">#1B2436</color>
     <color name="color_F5FFC700">#F5FFC700</color>
     <color name="color_1F2023">#1F2023</color>
+    <color name="color_FFD600">#FFD600</color>
+    <color name="color_1C283C">#1C283C</color>
+    <color name="color_26354D">#26354D</color>
+    <color name="color_1F75FF">#1F75FF</color>
+    <color name="color_0D31AF">#0D31AF</color>
+    <color name="color_1E2535">#1E2535</color>
+
     <color name="color_00FF81">#00FF81</color>
 
 </resources>
