--- a/app/src/main/res/layout/fragment_endcardgame.xml
+++ b/app/src/main/res/layout/fragment_endcardgame.xml
@@ -255,6 +255,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:paddingHorizontal="7dp" />
+        android:paddingHorizontal="7dp"
+        android:paddingBottom="10dp"
+        android:clipToPadding="false"/>
 
 </LinearLayout>
